PLD-COMP-RENDU/pld-comp/tests/ifcc-test-output/testfiles-test-erreurs-Test-4_5-9_erreur_var_non_declaree_1/gcc-compile.txt
input.c: In function ‘main’:
input.c:2:12: error: ‘x’ undeclared (first use in this function)
    2 |     return x;
      |            ^
input.c:2:12: note: each undeclared identifier is reported only once for each function it appears in

return code: 1
